{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 72,
  "lineage": "1bf4f067-c28e-b66f-4795-43a5c07507d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:internet-gateway/igw-09a3b1e9f3fa52851",
            "id": "igw-09a3b1e9f3fa52851",
            "owner_id": "667563228432",
            "tags": {
              "Name": "test-igw"
            },
            "tags_all": {
              "Name": "test-igw"
            },
            "vpc_id": "vpc-03c41e2583945cdc2"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:route-table/rtb-0bd7be5f4e5d38897",
            "id": "rtb-0bd7be5f4e5d38897",
            "owner_id": "667563228432",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a3b1e9f3fa52851",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-route"
            },
            "tags_all": {
              "Name": "test-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c41e2583945cdc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094a3fc0ad05d6db4",
            "route_table_id": "rtb-0bd7be5f4e5d38897",
            "subnet_id": "subnet-0fb1e6223945c920a"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_route_table.test-route",
            "aws_subnet.testsubnet-1",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef633099260dcbce",
            "route_table_id": "rtb-0bd7be5f4e5d38897",
            "subnet_id": "subnet-00166e37f1b0e04da"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_route_table.test-route",
            "aws_subnet.testsubnet-2",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:security-group/sg-0f5b2b88154f7c44f",
            "description": "allowing some inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5b2b88154f7c44f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test-sg",
            "name_prefix": "",
            "owner_id": "667563228432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg"
            },
            "tags_all": {
              "Name": "test-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c41e2583945cdc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testsubnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:subnet/subnet-0fb1e6223945c920a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb1e6223945c920a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667563228432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testsubnet-1"
            },
            "tags_all": {
              "Name": "testsubnet-1"
            },
            "vpc_id": "vpc-03c41e2583945cdc2"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testsubnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:subnet/subnet-00166e37f1b0e04da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00166e37f1b0e04da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667563228432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testsubnet-2"
            },
            "tags_all": {
              "Name": "testsubnet-2"
            },
            "vpc_id": "vpc-03c41e2583945cdc2"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:vpc/vpc-03c41e2583945cdc2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b886f6bf9b00752d",
            "default_route_table_id": "rtb-0d7d71cf171750a02",
            "default_security_group_id": "sg-0b23ded4249c79b52",
            "dhcp_options_id": "dopt-0f6d0758a45b38af5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c41e2583945cdc2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7d71cf171750a02",
            "owner_id": "667563228432",
            "tags": {
              "Name": "testvpc"
            },
            "tags_all": {
              "Name": "testvpc"
            }
          }
        }
      ]
    }
  ]
}